New features, improvements:
New function weighted.mean 
New function layerStats to compute the covariance and weighted covariance matrix across layers (by Jonathan Greenberg)
crosstab can now also process multi-layer objects, suggested by Neil Best
Improved of speed of getValuesBlock for RasterBrick using suggestion by Stefan Schlaffer
bug fixes:
'overlay' ignored the writeRaster arguments (reported by Oliver Soong)
The 'buffer' argument in extract (with points) was lost in the previous version. It has been restored. 
In extract with polygons failed with "getCover=TRUE". Reported by Ariel Ortiz-Bobea
'predict' now also works when using a single predictor raster layer (reported by Ben Weinstein)

--- 5-April-2012, version 1.9-82
New function 'getValuesFocal' to get focal values (a cell and its neighborhood)
Added .tmpdir function, provided by Shaun Walbridge, to make the name of the folder used to store temporary files user-specific to avoid collisions on multi-user platforms such as cluster computers. 
Improved support for accessing subdatasets (in gdal provided raster data). Non-standard names like "subdatset:filename" should now work (previously some were normalized to (invalid) path names). There is also an argument "sub" in raster().
Bug fixes: 
disaggregate sometimes failed for large files, patched by Jim Regetz. 
It was not possible to make a RasterStack from a single-layer RasterBrick (reported by Julian Zeidler).
The 'slope' returned by 'terrain' was not correct when used together with 'tri', 'tpi', or 'roughness', and when you use unit = 'degrees' (reported by Forrest Stevens)
predict / randomForest failed with more than one factor variable, reported by Xiong Xiong
Fixed bug when writing to EHdr files, reported by Elena
It is now assured that the filename returned by rasterTmpFile() does not exist (avoiding "overwrite" problems, reported by Diann Prosser).

--- 27-February-2012, version 1.9-70