@@ -1,8 +1,10 @@
 New features, improvements:
 New function weighted.mean 
-New function layerStats to compute the covariance and weighted covariance matrix across layers (by Jonathan Greenberg)
+New function layerStats to compute the correlation, covariance and weighted covariance matrix across layers (by Jonathan Greenberg)
 crosstab can now also process multi-layer objects, suggested by Neil Best
 Improved of speed of getValuesBlock for RasterBrick using suggestion by Stefan Schlaffer
+print method for Spatial* objects similar to that for Raster* objects
+
 bug fixes:
 'overlay' ignored the writeRaster arguments (reported by Oliver Soong)
 The 'buffer' argument in extract (with points) was lost in the previous version. It has been restored. 
